# Skystone-Hindsight-2020

./: README.md  build.common.gradle  import-summary.txt
TeamCode/: CMakeLists.txt  build.gradle
TeamCode/src/main/cpp/: VisionConstants.cpp  VisionUtil.cpp  VisionUtil.h  native-lib.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/: Alliance.java  GamePiece.java  Main.java  MainAuto.java  Robot.java  RobotState.java  SkystoneRobot.java  TuneLift.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/auto/: AutoModeEndedException.java  AutoModeExecutor.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/control/: EnhancedGamepad.java  StackTracker.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/paths/: Navigation.java  SkystoneToFoundation.java  SkystoneToFoundationAndNavigate.java  TwoSkystonesToFoundation.java  TwoSkystonesToFoundationAndNavigate.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/planners/: CollectorFeederPlanner.java  ISuperstructureMotionPlanner.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc10515/statemachines/: FeederClawStateMachine.java  FeederExtensionStateMachine.java  FeederProtrudeStateMachine.java  FlywheelStateMachine.java  FoundationClawsStateMachine.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/ftc15026/: Alliance.java  GamePiece.java  Main.java  MainAuto.java  NavigationAutonomous.java  Robot.java  RobotState.java  SkystoneRobot.java
TeamCode/src/main/res/xml/: teamwebcamcalibrations.xml
(+156 files in other folders)
